# LLMSearcher

./: .gitattributes  .gitignore  app.py  main.py  pyproject.toml  readme.md
brows_er(old)/: main.py
brows_er（unfinished）/Agent/contextmanager/: service.py  urls.py  views.py
brows_er（unfinished）/Agent/prompt/: prompts.py
brows_er（unfinished）/Agent/service/: service.py  urls.py  views.py
brows_er（unfinished）/Browserservice/: service.py  urls.py  views.py
brows_er（unfinished）/Controller/: service.py  urls.py  views.py
brows_er（unfinished）/DomTree/: service.py  urls.py  views.py
brows_er（unfinished）/LLMservice/: service.py  urls.py  views.py
browser/: main.py
browser/src/core/: llm_browser.py  web_crawler.py
browser/src/gui/: main_window.py
browser/src/gui/dialogs/: batch_task_dialog.py  history_dialog.py
browser/src/gui/widgets/: search_thread.py
