[project]
name = "llmsearcher"
version = "0.1.0"
description = ""
authors = [
    {name = "GUIGUIzc",email = "862121801@qq.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.1.5,<6.0.0)",
    "playwright (>=1.49.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
